2011-07-19  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/xmlParse.pm: When reading references to printer IDs
	  in driver and option XML files, always apply the
	  translate_printer_id() function from DB.pm, as in foomatic-db
	  there are still some old references which were forgotten to be
	  updated (bug).

	* lib/Foomatic/DB.pm: Optimized translate_printer_id() by caching
	  the translation table in memory instead of reading it again on every
	  call.

	* lib/Foomatic/xmlParse.pm: Added some comments which work around a bug
	  in the syntax highlighting of emacs, so that the file appears
	  correctly highlighted and therefore more readable in emacs.

2011-07-18  Daniel Dressler <danieru.dressler@gmail.com>

	* Fixed xmlParse's parseOverview not skipping drivers with no
	  command line or pdf command line.

2011-07-18  Daniel Dressler <danieru.dressler@gmail.com>

	* Fixed xmlParse attempting to use driver->{'id'} in stead of
	  driver->{'name'} in isPairSupported() and parseCombo()'s error log

2011-07-17  Daniel Dressler <danieru.dressler@gmail.com>

	* Added printer_byname key to driver data structure for fast lookup,
	  only version 2 and better

	* parseCombo() now caches the drivers. This speeds up bulk ppd
	  generation.

	* getPrinterSpecificDriver() now only clones when needed,
	  saving ~9 seconds off an overview

	* 'log' keys now exist in DB and xmlParse objects,
	  errors get logged there.

	* parseCombo() now checks that the driver/printer pair is supported.

	* skipIfXml argument added to get_drivers_for_printer(), ppdfile uses it
	  to avoid a overview generation, possible because parseCombo will
	  now error if a pair is unsupported.

	* Fixed parseOverview not adding a driver to a printer's list of
	  supported drivers during driver driven combination.

2011-07-15  Daniel Dressler <danieru.dressler@gmail.com>

	* Fixed get_overview(), I had double quotes arround a glob